--- a/.gitignore
+++ b/.gitignore
@@ -6,21 +6,21 @@
 *.interp
 
 //Ignorar archivos del .antlr que son automaticos
-parte1.2/gramatica/.antlr/MapaLexer.java
-parte1.2/gramatica/.antlr/MapaParser.java
+Parte1_2/gramatica/.antlr/MapaLexer.java
+Parte1_2/gramatica/.antlr/MapaParser.java
 
-parte 3/.antlr/EjemploLexer.java
-parte 3/.antlr/EjemploParser.java
-parte 3/.antlr/EjemploParserBaseListener.java
-parte 3/.antlr/EjemploParserListener.java
+Parte3/.antlr/EjemploLexer.java
+Parte3/.antlr/EjemploParser.java
+Parte3/.antlr/EjemploParserBaseListener.java
+Parte3/.antlr/EjemploParserListener.java
 
 //Ignorar archivos que generamos con los .g4
-parte1.2/gramatica/MapaLexer.java
-parte1.2/gramatica/MapaParser.java
-parte1.2/gramatica/MapaParserBaseListener.java
-parte1.2/gramatica/MapaParserListener.java
+Parte1_2/gramatica/MapaLexer.java
+Parte1_2/gramatica/MapaParser.java
+Parte1_2/gramatica/MapaParserBaseListener.java
+Parte1_2/gramatica/MapaParserListener.java
 
-parte 3/EjemploLexer.java
-parte 3/EjemploParser.java
-parte 3/EjemploParserBaseListener.java
-parte 3/EjemploParserListener.java
+Parte3/EjemploLexer.java
+Parte3/EjemploParser.java
+Parte3/EjemploParserBaseListener.java
+Parte3/EjemploParserListener.java
